--- a/src/languages/ar_AR.json
+++ b/src/languages/ar_AR.json
@@ -3467,31 +3467,16 @@
         "steps": {
           "step_1": {
             "title": "السباق مباشر",
-            "subtitle_parts": [
-              "الرمز صاحب أعلى",
-              " حجم الشراء ",
-              "الآن هو الملك الحالي."
-            ]
+            "subtitle_parts": ["الرمز صاحب أعلى", " حجم الشراء ", "الآن هو الملك الحالي."]
           },
           "step_2": {
             "title": "تاج واحد يوميًا",
-            "subtitle_parts": [
-              "عند",
-              " منتصف الليل (12:00 صباحًا UTC)، ",
-              "يُتوَّج الرمز المتصدر فائز اليوم."
-            ]
+            "subtitle_parts": ["عند", " منتصف الليل (12:00 صباحًا UTC)، ", "يُتوَّج الرمز المتصدر فائز اليوم."]
           },
           "step_3": {
             "title": "اربح مكافآت",
-            "subtitle_parts": [
-              "يحصل مشترو الملك الحالي على",
-              " نقاط مضاعفة 2x."
-            ],
-            "subtitle_two_parts": [
-              "المنشئون",
-              " يكسبون نقاطًا ",
-              "عند تتويجهم."
-            ]
+            "subtitle_parts": ["يحصل مشترو الملك الحالي على", " نقاط مضاعفة 2x."],
+            "subtitle_two_parts": ["المنشئون", " يكسبون نقاطًا ", "عند تتويجهم."]
           }
         }
       }
