--- a/src/languages/hi_IN.json
+++ b/src/languages/hi_IN.json
@@ -3467,31 +3467,16 @@
         "steps": {
           "step_1": {
             "title": "रेस लाइव है",
-            "subtitle_parts": [
-              "सबसे अधिक वाला टोकन",
-              " खरीद वॉल्यूम ",
-              "अभी वर्तमान किंग है।"
-            ]
+            "subtitle_parts": ["सबसे अधिक वाला टोकन", " खरीद वॉल्यूम ", "अभी वर्तमान किंग है।"]
           },
           "step_2": {
             "title": "एक ताज एक दिन में",
-            "subtitle_parts": [
-              "पर",
-              " मध्यरात्रि (12:00 AM UTC), ",
-              "प्रमुख टोकन को दैनिक विजेता घोषित किया जाता है।"
-            ]
+            "subtitle_parts": ["पर", " मध्यरात्रि (12:00 AM UTC), ", "प्रमुख टोकन को दैनिक विजेता घोषित किया जाता है।"]
           },
           "step_3": {
             "title": "पुरस्कार जीतें",
-            "subtitle_parts": [
-              "वर्तमान किंग के खरीदारों को मिलते हैं",
-              " 2x अंक।"
-            ],
-            "subtitle_two_parts": [
-              "निर्माता",
-              " अंक कमाते हैं ",
-              "विजेता घोषित होने पर।"
-            ]
+            "subtitle_parts": ["वर्तमान किंग के खरीदारों को मिलते हैं", " 2x अंक।"],
+            "subtitle_two_parts": ["निर्माता", " अंक कमाते हैं ", "विजेता घोषित होने पर।"]
           }
         }
       }
