--- a/src/languages/ja_JP.json
+++ b/src/languages/ja_JP.json
@@ -3467,31 +3467,16 @@
         "steps": {
           "step_1": {
             "title": "レースが開始",
-            "subtitle_parts": [
-              "ほとんどの",
-              " 購入ボリューム ",
-              "今現在、これは現行のキングです。"
-            ]
+            "subtitle_parts": ["ほとんどの", " 購入ボリューム ", "今現在、これは現行のキングです。"]
           },
           "step_2": {
             "title": "1日に1つの王冠",
-            "subtitle_parts": [
-              "午前零時（UTC）、",
-              "深夜 (午前0:00 UTC)",
-              "リーディングトークンが日ごとの勝者として戴冠します。"
-            ]
+            "subtitle_parts": ["午前零時（UTC）、", "深夜 (午前0:00 UTC)", "リーディングトークンが日ごとの勝者として戴冠します。"]
           },
           "step_3": {
             "title": "リワードを得る",
-            "subtitle_parts": [
-              "現在のキングの購入者は",
-              " 2倍ポイントをもらえます。"
-            ],
-            "subtitle_two_parts": [
-              "クリエイター",
-              " ポイントを獲得 ",
-              "戴冠時に。"
-            ]
+            "subtitle_parts": ["現在のキングの購入者は", " 2倍ポイントをもらえます。"],
+            "subtitle_two_parts": ["クリエイター", " ポイントを獲得 ", "戴冠時に。"]
           }
         }
       }
