--- a/src/languages/ko_KR.json
+++ b/src/languages/ko_KR.json
@@ -3467,31 +3467,16 @@
         "steps": {
           "step_1": {
             "title": "경주가 시작되었습니다",
-            "subtitle_parts": [
-              "가장 많은",
-              " 구매량 ",
-              "높은 토큰이 현재 왕입니다."
-            ]
+            "subtitle_parts": ["가장 많은", " 구매량 ", "높은 토큰이 현재 왕입니다."]
           },
           "step_2": {
             "title": "하루 한 왕관",
-            "subtitle_parts": [
-              "자정(UTC 12:00에), ",
-              " 자정 (오전 12:00 UTC), ",
-              "선두 토큰이 일일 우승자로 선정됩니다."
-            ]
+            "subtitle_parts": ["자정(UTC 12:00에), ", " 자정 (오전 12:00 UTC), ", "선두 토큰이 일일 우승자로 선정됩니다."]
           },
           "step_3": {
             "title": "보상 획득",
-            "subtitle_parts": [
-              "현재 왕의 구매자는",
-              " 2배 포인트를 받습니다."
-            ],
-            "subtitle_two_parts": [
-              "창작자",
-              "는 포인트를 획득합니다 ",
-              "왕관을 받을 때."
-            ]
+            "subtitle_parts": ["현재 왕의 구매자는", " 2배 포인트를 받습니다."],
+            "subtitle_two_parts": ["창작자", "는 포인트를 획득합니다 ", "왕관을 받을 때."]
           }
         }
       }
