--- a/src/languages/ru_RU.json
+++ b/src/languages/ru_RU.json
@@ -3467,31 +3467,16 @@
         "steps": {
           "step_1": {
             "title": "Гонка в прямом эфире",
-            "subtitle_parts": [
-              "Токен с наибольшим",
-              " объёмом покупок ",
-              "сейчас является текущим королем."
-            ]
+            "subtitle_parts": ["Токен с наибольшим", " объёмом покупок ", "сейчас является текущим королем."]
           },
           "step_2": {
             "title": "Одна корона в день",
-            "subtitle_parts": [
-              "В",
-              " полночь (00:00 UTC), ",
-              "лидирующий токен становится ежедневным победителем."
-            ]
+            "subtitle_parts": ["В", " полночь (00:00 UTC), ", "лидирующий токен становится ежедневным победителем."]
           },
           "step_3": {
             "title": "Выигрывайте награды",
-            "subtitle_parts": [
-              "Покупатели текущего короля получают",
-              " 2x баллы."
-            ],
-            "subtitle_two_parts": [
-              "Создатели",
-              " зарабатывают баллы ",
-              "когда коронованы."
-            ]
+            "subtitle_parts": ["Покупатели текущего короля получают", " 2x баллы."],
+            "subtitle_two_parts": ["Создатели", " зарабатывают баллы ", "когда коронованы."]
           }
         }
       }
