--- a/src/languages/th_TH.json
+++ b/src/languages/th_TH.json
@@ -3467,31 +3467,16 @@
         "steps": {
           "step_1": {
             "title": "การแข่งขันกำลังดำเนินอยู่",
-            "subtitle_parts": [
-              "โทเค็นที่มี",
-              "ปริมาณการซื้อ",
-              "ขณะนี้เป็นราชาปัจจุบัน"
-            ]
+            "subtitle_parts": ["โทเค็นที่มี", "ปริมาณการซื้อ", "ขณะนี้เป็นราชาปัจจุบัน"]
           },
           "step_2": {
             "title": "หนึ่งมงกุฎต่อวัน",
-            "subtitle_parts": [
-              "ที่",
-              "เที่ยงคืน (12:00 น. UTC), ",
-              "โทเค็นชั้นนำจะได้รับการสวมมงกุฎเป็นผู้ชนะประจำวัน"
-            ]
+            "subtitle_parts": ["ที่", "เที่ยงคืน (12:00 น. UTC), ", "โทเค็นชั้นนำจะได้รับการสวมมงกุฎเป็นผู้ชนะประจำวัน"]
           },
           "step_3": {
             "title": "รับรางวัล",
-            "subtitle_parts": [
-              "ผู้ซื้อที่เป็นราชาปัจจุบันจะได้รับ",
-              "2x จุด."
-            ],
-            "subtitle_two_parts": [
-              "ผู้สร้าง",
-              "รับคะแนน",
-              "เมื่อครอบครองบัลลังก์"
-            ]
+            "subtitle_parts": ["ผู้ซื้อที่เป็นราชาปัจจุบันจะได้รับ", "2x จุด."],
+            "subtitle_two_parts": ["ผู้สร้าง", "รับคะแนน", "เมื่อครอบครองบัลลังก์"]
           }
         }
       }
