--- a/src/languages/zh_CN.json
+++ b/src/languages/zh_CN.json
@@ -3467,31 +3467,16 @@
         "steps": {
           "step_1": {
             "title": "比赛进行中",
-            "subtitle_parts": [
-              "当前交易量最大的代币",
-              "买入量",
-              "现在是当前的王者。"
-            ]
+            "subtitle_parts": ["当前交易量最大的代币", "买入量", "现在是当前的王者。"]
           },
           "step_2": {
             "title": "每天一个王冠",
-            "subtitle_parts": [
-              "在",
-              "午夜（UTC时间12:00），",
-              "领先的代币被加冕为每日赢家。"
-            ]
+            "subtitle_parts": ["在", "午夜（UTC时间12:00），", "领先的代币被加冕为每日赢家。"]
           },
           "step_3": {
             "title": "赢得奖励",
-            "subtitle_parts": [
-              "当前王者的买家获得",
-              "2倍积分。"
-            ],
-            "subtitle_two_parts": [
-              "创作者",
-              "当被加冕时",
-              "获得积分。"
-            ]
+            "subtitle_parts": ["当前王者的买家获得", "2倍积分。"],
+            "subtitle_two_parts": ["创作者", "当被加冕时", "获得积分。"]
           }
         }
       }
